--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -19,25 +19,31 @@
         android:layout_gravity="center_horizontal"/>
 
     <Button
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:text="@string/first_app"
         android:id="@+id/first_app"
         android:onClick="clickedApp"
         style="@style/RegularAppButton" />
     <Button
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="85dp"
         android:text="@string/second_app"
         android:id="@+id/second_app"
         android:onClick="clickedApp"
         style="@style/RegularAppButton"/>
     <Button
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="130dp"
         android:text="@string/third_app"
         android:id="@+id/third_app"
         android:onClick="clickedApp"
         style="@style/RegularAppButton"/>
     <Button
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="175dp"
+        android:text="@string/fourth_app"
+        android:id="@+id/fourth_app"
+        android:onClick="clickedApp"
+        style="@style/RegularAppButton"/>
+    <Button
+        android:layout_marginTop="220dp"
         android:text="@string/capstone_app"
         android:id="@+id/capstone_app"
         android:onClick="clickedApp"
